# cooklog

./: .gitignore  pyproject.toml  requirements.txt
contact/: urls.py  views.py
contact/templates/contact/: contact.html
project/: settings.py  urls.py
project/static/project/css/: style_meranda.css
project/templates/: 503.html  base.html  dashboard.html
project/templates/parts/dashboard/: footer.html  nav.html
project/templates/parts/recipe/: nav.html
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py
recipe/templates/markdownx/: widget.html
recipe/templates/recipe/: article.html  category.html  create.html  edit.html  index.html  manage_article.html
static/css/: style_paper.css
static/meranda/fonts/flaticon/font/: flaticon.433d777d705a.css
user/: forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_is_admin.py  0003_auto_20210925_1515.py
user/templates/user/: account_settings.html  change_password.html  create.html  done_creation.html  login.html  mypage.html  profile.html  thanks.html
user/templates/user/mail_templates/create/: body.txt  subject.txt
