[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["uichi <37263474+uichi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.12"
django-markdownx = "3.0.1"
django-taggit = "1.5.1"
Markdown = "3.2.1"
pillow = "8.3.2"
python-dateutil = "2.8.1"
pytz = "2020.1"
six = "1.16.0"
sqlparse = "0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
