[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["uichi <37263474+uichi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2"
django-markdownx = "^4.0.7"
django-taggit = "^5.0.1"
Markdown = "^3.5.2"
pillow = "^10.2.0"
python-dateutil = "^2.8.1"
pytz = "^2023.3.post1"
six = "^1.16.0"
sqlparse = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
